noinst_LTLIBRARIES = libclasses.la

libclasses_la_SOURCES = atom.cpp atomtype.cpp atomtypedata.cpp atomtypelist.cpp
libclasses_la_SOURCES += box.cpp box_cubic.cpp box_monoclinic.cpp box_nonperiodic.cpp box_orthorhombic.cpp box_triclinic.cpp braggpeak.cpp
libclasses_la_SOURCES += cell.cpp cellarray.cpp cellneighbour.cpp changedata.cpp changestore.cpp configuration.cpp configuration_box.cpp configuration_composition.cpp configuration_contents.cpp configuration_energy.cpp configuration_upkeep.cpp
libclasses_la_SOURCES += data.cpp
libclasses_la_SOURCES += energykernel.cpp
libclasses_la_SOURCES += forcekernel.cpp
libclasses_la_SOURCES += grain.cpp
libclasses_la_SOURCES += histogram.cpp
libclasses_la_SOURCES += isotopedata.cpp isotopologue.cpp isotopologuemix.cpp
libclasses_la_SOURCES += kvector.cpp
libclasses_la_SOURCES += molecule.cpp
libclasses_la_SOURCES += pairpotential.cpp potentialmap.cpp partialset.cpp
libclasses_la_SOURCES += scatteringmatrix.cpp species.cpp species_atomic.cpp species_grains.cpp species_intra.cpp species_io.cpp species_isotopologues.cpp species_transform.cpp speciesangle.cpp speciesatom.cpp speciesbond.cpp speciesgrain.cpp species_io.cpp
libclasses_la_SOURCES += weights.cpp

noinst_HEADERS = atom.h atomtype.h atomtypedata.h atomtypelist.h box.h braggpeak.h cell.h cellarray.h cellneighbour.h changedata.h changestore.h configuration.h data.h energykernel.h forcekernel.h grain.h histogram.h isotopedata.h isotopologue.h isotopologuemix.h kvector.h molecule.h pairpotential.h potentialmap.h partialset.h scatteringmatrix.h species.h speciesangle.h speciesatom.h speciesbond.h speciesgrain.h weights.h

AM_CPPFLAGS = -I../ @DUQ_CFLAGS@
