noinst_LTLIBRARIES = libclasses.la

libclasses_la_SOURCES = angle.cpp atom.cpp atomtype.cpp atomtypedata.cpp atomtypelist.cpp
libclasses_la_SOURCES += bond.cpp box.cpp box_cubic.cpp box_monoclinic.cpp box_nonperiodic.cpp box_orthorhombic.cpp box_triclinic.cpp braggpeak.cpp
libclasses_la_SOURCES += cell.cpp cellarray.cpp celldistributor.cpp cellneighbour.cpp changedata.cpp changestore.cpp configuration.cpp configuration_box.cpp configuration_composition.cpp configuration_contents.cpp configuration_energy.cpp configuration_upkeep.cpp
libclasses_la_SOURCES += data.cpp
libclasses_la_SOURCES += energykernel.cpp
libclasses_la_SOURCES += forcekernel.cpp
libclasses_la_SOURCES += grain.cpp
libclasses_la_SOURCES += histogram.cpp
libclasses_la_SOURCES += intra.cpp isotopedata.cpp isotopologue.cpp isotopologuemix.cpp
libclasses_la_SOURCES += kvector.cpp
libclasses_la_SOURCES += masterintra.cpp molecule.cpp
libclasses_la_SOURCES += pairpotential.cpp potentialmap.cpp partialset.cpp
libclasses_la_SOURCES += scatteringmatrix.cpp species.cpp species_atomic.cpp species_grains.cpp species_intra.cpp species_io.cpp species_isotopologues.cpp species_transform.cpp speciesangle.cpp speciesatom.cpp speciesbond.cpp speciesgrain.cpp speciesinfo.cpp speciesintra.cpp speciestorsion.cpp species_io.cpp
libclasses_la_SOURCES += torsion.cpp
libclasses_la_SOURCES += weights.cpp

noinst_HEADERS = angle.h atom.h atomtype.h atomtypedata.h atomtypelist.h bond.h box.h braggpeak.h cell.h cellarray.h celldistributor.h cellneighbour.h changedata.h changestore.h configuration.h data.h energykernel.h forcekernel.h grain.h histogram.h intra.h isotopedata.h isotopologue.h isotopologuemix.h kernelflags.h kvector.h masterintra.h molecule.h pairpotential.h potentialmap.h partialset.h scatteringmatrix.h species.h speciesangle.h speciesatom.h speciesbond.h speciesgrain.h speciesinfo.h speciesintra.h speciestorsion.h torsion.h weights.h

AM_CPPFLAGS = -I../ @DUQ_CFLAGS@
