noinst_LTLIBRARIES = libclasses.la

libclasses_la_SOURCES = angle.cpp atom.cpp atomtype.cpp atomtypedata.cpp atomtypelist.cpp
libclasses_la_SOURCES += bond.cpp box.cpp box_cubic.cpp box_monoclinic.cpp box_nonperiodic.cpp box_orthorhombic.cpp box_triclinic.cpp braggreflection.cpp
libclasses_la_SOURCES += cell.cpp cellarray.cpp celldistributor.cpp cellneighbour.cpp changedata.cpp changestore.cpp configuration.cpp configuration_box.cpp configuration_composition.cpp configuration_contents.cpp configuration_sites.cpp configuration_upkeep.cpp coredata.cpp
libclasses_la_SOURCES += data1dstore.cpp data2dstore.cpp data3dstore.cpp distributor.cpp
libclasses_la_SOURCES += empiricalformula.cpp energykernel.cpp
libclasses_la_SOURCES += forcekernel.cpp
libclasses_la_SOURCES += grain.cpp
libclasses_la_SOURCES += intra.cpp isotopedata.cpp isotopologue.cpp isotopologuemix.cpp isotopologuereference.cpp
libclasses_la_SOURCES += kvector.cpp
libclasses_la_SOURCES += masterintra.cpp molecule.cpp moleculedistributor.cpp
libclasses_la_SOURCES += regionaldistributor.cpp
libclasses_la_SOURCES += pairpotential.cpp potentialmap.cpp partialset.cpp
libclasses_la_SOURCES += regionaldistributor.cpp
libclasses_la_SOURCES += scaledenergykernel.cpp scatteringmatrix.cpp site.cpp sitestack.cpp species.cpp species_atomic.cpp species_grains.cpp species_intra.cpp species_io.cpp species_isotopologues.cpp species_site.cpp species_transform.cpp speciesangle.cpp speciesatom.cpp speciesbond.cpp speciesgrain.cpp speciesinfo.cpp speciesintra.cpp speciessite.cpp speciestorsion.cpp species_io.cpp
libclasses_la_SOURCES += torsion.cpp
libclasses_la_SOURCES += weights.cpp

noinst_HEADERS = angle.h atom.h atomtype.h atomtypedata.h atomtypelist.h
noinst_HEADERS += bond.h box.h braggreflection.h
noinst_HEADERS += cell.h cellarray.h celldistributor.h cellneighbour.h changedata.h changestore.h configuration.h coredata.h
noinst_HEADERS += data1dstore.h data2dstore.h data3dstore.h distributor.h
noinst_HEADERS += empiricalformula.h energykernel.h
noinst_HEADERS += forcekernel.h
noinst_HEADERS += grain.h
noinst_HEADERS += intra.h isotopedata.h isotopologue.h isotopologuemix.h isotopologuereference.h
noinst_HEADERS += kernelflags.h kvector.h
noinst_HEADERS += masterintra.h molecule.h moleculedistributor.h
noinst_HEADERS += pairpotential.h potentialmap.h partialset.h
noinst_HEADERS += regionaldistributor.h
noinst_HEADERS += scaledenergykernel.h scatteringmatrix.h site.h sitestack.h species.h speciesangle.h speciesatom.h speciesbond.h speciesgrain.h speciesinfo.h speciesintra.h speciessite.h speciestorsion.h
noinst_HEADERS += torsion.h
noinst_HEADERS += weights.h

AM_CPPFLAGS = -I../ @DISSOLVE_CFLAGS@
