add_library(
        generator
        add.cpp
        add.h
        addPair.cpp
        addPair.h
        box.cpp
        box.h
        context.cpp
        context.h
        coordinateSets.cpp
        coordinateSets.h
        copy.cpp
        copy.h
        customRegion.cpp
        customRegion.h
        cylindricalGlobalPotential.cpp
        cylindricalGlobalPotential.h
        cylindricalRegion.cpp
        cylindricalRegion.h
        generalRegion.cpp
        generalRegion.h
        generator.cpp
        generator.h
        importCoordinates.cpp
        importCoordinates.h
        iterateSelection.cpp
        iterateSelection.h
        node.cpp
        node.h
        nodeValue.cpp
        nodeValue.h
        parameters.cpp
        parameters.h
        pickBase.cpp
        pickBase.h
        pick.cpp
        pick.h
        pickProximity.cpp
        pickProximity.h
        pickRegion.cpp
        pickRegion.h
        regionalGlobalPotential.cpp
        regionalGlobalPotential.h
        regionBase.cpp
        regionBase.h
        registry.cpp
        registry.h
        remove.cpp
        remove.h
        restraintPotential.cpp
        restraintPotential.h
        rotateFragment.cpp
        rotateFragment.h
        runLayer.cpp
        runLayer.h
        select.cpp
        select.h
        sequence.cpp
        sequence.h
        sizeFactor.cpp
        sizeFactor.h
        sphericalGlobalPotential.cpp
        sphericalGlobalPotential.h
        temperature.cpp
        temperature.h
        transmute.cpp
        transmute.h
)

target_include_directories(generator PRIVATE ${PROJECT_SOURCE_DIR}/src)

target_link_libraries(generator PRIVATE base)
