noinst_LTLIBRARIES = libgenericitems.la

libgenericitems_la_SOURCES = base.cpp item.cpp list.cpp

noinst_HEADERS = array2d.h array2darraydouble.h array2ddouble.h array2ddummy.h array.h arraydouble.h arraydouble.h arrayint.h arrayvec3double.h arrayvec3int.h 
noinst_HEADERS += bool.h 
noinst_HEADERS += charstring.h container.h
noinst_HEADERS += double.h
noinst_HEADERS += base.h item.h items.h list.h listhelper.h
noinst_HEADERS += int.h 
noinst_HEADERS += vec3double.h vec3int.h

AM_CPPFLAGS = -I../ @DISSOLVE_CFLAGS@

