# Target 'gui'
add_library(
  gui
  # Qt Resources
  main.qrc
  # Core Classes
  wizardFuncs.cpp
  wizard.h
  wizardFooter.h
  wizardFooter.ui
  wizardHeader.h
  wizardHeader.ui
  # Viewers
  configurationViewerFuncs.cpp
  configurationViewer_input.cpp
  configurationViewer_interaction.cpp
  configurationViewer_render.cpp
  configurationViewer.h
  configurationViewerWidgetFuncs.cpp
  configurationViewerWidget.h
  configurationViewerWidget.ui
  dataViewerFuncs.cpp
  dataViewer_input.cpp
  dataViewer_interaction.cpp
  dataViewer_contextMenu.cpp
  dataViewer_render.cpp
  dataViewer.h
  dataWidgetFuncs.cpp
  dataWidget.h
  dataWidget.ui
  selectSymbolFuncs.cpp
  selectSymbol.h
  selectSymbol.ui
  speciesEditorFuncs.cpp
  speciesEditor.h
  speciesEditor.ui
  speciesViewer.h
  speciesViewerFuncs.cpp
  speciesViewer_input.cpp
  speciesViewer_interaction.cpp
  speciesViewer_render.cpp
  speciesWidgetFuncs.cpp
  speciesWidget.h
  speciesWidget.ui
  viewerFuncs.cpp
  viewer_input.cpp
  viewer_interaction.cpp
  viewer_options.cpp
  viewer_query.cpp
  viewer_render.cpp
  viewer_renderables.cpp
  viewer_view.cpp
  viewer.h
  # Widgets and Wizards
  moduleControlWidgetFuncs.cpp
  moduleControlWidget.h
  moduleControlWidget.ui
  nodeControlWidgetFuncs.cpp
  nodeControlWidget.h
  nodeControlWidget.ui
  procedureWidgetFuncs.cpp
  procedureWidget.h
  procedureWidget.ui
  selectAtomTypeWidgetFuncs.cpp
  selectAtomTypeWidget.h
  selectAtomTypeWidget.ui
  selectForcefieldWidgetFuncs.cpp
  selectForcefieldWidget.h
  selectForcefieldWidget.ui
  selectSpeciesWidgetFuncs.cpp
  selectSpeciesWidget.h
  selectSpeciesWidget.ui
  # Dialogs
  addConfigurationDialogFuncs.cpp
  addConfigurationDialog.h
  addConfigurationDialog.ui
  addForcefieldTermsDialogFuncs.cpp
  addForcefieldTermsDialog.h
  copySpeciesTermsDialogFuncs.cpp
  copySpeciesTermsDialog.h
  copySpeciesTermsDialog.ui
  dataManagerDialogFuncs.cpp
  dataManagerDialog.h
  dataManagerDialog.ui
  editSpeciesDialogFuncs.cpp
  editSpeciesDialog.h
  editSpeciesDialog.ui
  getConfigurationNameDialogFuncs.cpp
  getConfigurationNameDialog.h
  getConfigurationNameDialog.ui
  getModuleLayerNameDialogFuncs.cpp
  getModuleLayerNameDialog.h
  getModuleLayerNameDialog.ui
  getSpeciesNameDialogFuncs.cpp
  getSpeciesNameDialog.h
  getSpeciesNameDialog.ui
  getTabNameDialogFuncs.cpp
  getTabNameDialog.h
  getTabNameDialog.ui
  importCIFDialogFuncs.cpp
  importCIFDialog.h
  importCIFDialog.ui
  importLigParGenDialogFuncs.cpp
  importLigParGenDialog.h
  importLigParGenDialog.ui
  importSpeciesDialogFuncs.cpp
  importSpeciesDialog.h
  importSpeciesDialog.ui
  intramolecularTermsDialogFuncs.cpp
  intramolecularTermsDialog.h
  intramolecularTermsDialog.ui
  modifyChargesDialog.cpp
  modifyChargesDialog.h
  selectAtomTypeDialogFuncs.cpp
  selectAtomTypeDialog.h
  selectAtomTypeDialog.ui
  selectElementDialogFuncs.cpp
  selectElementDialog.h
  selectElementDialog.ui
  selectGenericItemDialogFuncs.cpp
  selectGenericItemDialog.h
  selectGenericItemDialog.ui
  selectRestartFileDialogFuncs.cpp
  selectRestartFileDialog.h
  selectRestartFileDialog.ui
  selectSpeciesDialogFuncs.cpp
  selectSpeciesDialog.h
  selectSpeciesDialog.ui
  # Main Tabs
  configurationTabFuncs.cpp
  configurationTab.h
  configurationTab.ui
  forcefieldTabFuncs.cpp
  forcefieldTab.h
  forcefieldTab.ui
  layerTabFuncs.cpp
  layerTab.h
  layerTab.ui
  mainTab.cpp
  mainTab.h
  mainTabsBarFuncs.cpp
  mainTabsBar.h
  mainTabsWidgetFuncs.cpp
  mainTabsWidget.h
  messagesTabFuncs.cpp
  messagesTab.h
  messagesTab.ui
  overviewTabFuncs.cpp
  overviewTab.h
  speciesTabFuncs.cpp
  speciesTab_geometry.cpp
  speciesTab_isotopologues.cpp
  speciesTab_sites.cpp
  speciesTab.h
  speciesTab.ui
  # Main UI
  guiFuncs.cpp
  gui_simulation.cpp
  gui.h
  gui.ui
  menu_configuration.cpp
  menu_file.cpp
  menu_help.cpp
  menu_layer.cpp
  menu_simulation.cpp
  menu_species.cpp
  outputHandlerFuncs.cpp
  outputHandler.h
  stockColours.cpp
  stockColours.h
  threadFuncs.cpp
  thread.h
  # QML type register
  typesFuncs.cpp
  types.h
)

target_include_directories(
  gui
  PRIVATE ${PROJECT_SOURCE_DIR}/src
          ${PROJECT_BINARY_DIR}/src
          ${Qt6Widgets_INCLUDE_DIRS}
          ${FREETYPE_INCLUDE_DIRS}
          Qt6::OpenGL
          Qt6::OpenGLWidgets
          Qt6::Core
)

target_link_libraries(
  gui
  PRIVATE keywordWidgets
          delegates
          widgets
          models
          base
          Qt6::OpenGL
          Qt6::OpenGLWidgets
          Qt6::Quick
          Qt6::QuickControls2
          Qt6::Core
          Qt6::Gui
          Qt6::Qml
          Qt6::QmlModels
          Qt6::QuickWidgets
)

# Subdirectories
add_subdirectory(keywordWidgets)
add_subdirectory(delegates)
add_subdirectory(render)
add_subdirectory(widgets)
add_subdirectory(models)
